@@ -95,17 +95,16 @@ class BowlingCalculatorTest {
         assertEquals(300, calc.score());
     }
 
-//    @Test
-//    void getResults() {
-//        addRolls(8, 2, 5, 4, 9, 0, 10, 10, 5, 5, 5, 3, 6, 3, 9, 1, 9, 0);
-//        assertEquals("|8  /|5  4|9  -|X  -|X  -|5  /|5  3|6  3|9  /|9  -| \n" +
-//                              "|  15|  24|  33|  58|  78|  93| 101| 110| 129| 183|", calc.getResults());
-//    }
+    @Test
+    void getMoreResults() {
+        addRolls(8, 2, 5, 4, 9, 0, 10, 10, 5, 5, 5, 3, 6, 3, 9, 1, 9, 0);
+        assertEquals("|8  /|5  4|9  0|X  -|X  -|5  /|5  3|6  3|9  /|9  0| \n" +
+                              "|  15|  24|  33|  58|  78|  93| 101| 110| 129| 138|", calc.getResults());
+    }
 
     @Test
-    void testGetResults() {
-        ArrayList<Integer> rolls = new ArrayList<>(
-                Arrays.asList(8, 2, 5, 4, 9, 0, 10, 10, 5, 5, 5, 3, 6, 3, 9, 1, 9, 0));
+    void getResults() {
+        List<Integer> rolls = List.of(8, 2, 5, 4, 9, 0, 10, 10, 5, 5, 5, 3, 6, 3, 9, 1, 9, 0);
         for (Integer roll : rolls) {
             calc.addRoll(roll);
         }
@@ -118,6 +117,8 @@ class BowlingCalculatorTest {
     @Test
     void addSpaces() {
         assertEquals("   ", calc.addSpaces(1));
+        assertEquals("  ", calc.addSpaces(2));
+        assertEquals(" ", calc.addSpaces(3));
     }
 
     private void addRolls(int... examplePins) {
